--- a/NodeJS/ExpressJS/package.json
+++ b/NodeJS/ExpressJS/package.json
@@ -1,10 +1,12 @@
 {
   "name": "expressjs",
   "version": "1.0.0",
-  "description": "",
+  "description": "for practice",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "author": "ashwin",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
