--- a/NodeJS/Chat Application/package.json
+++ b/NodeJS/Chat Application/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Group Chat Application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "ashwin",
   "license": "ISC",
@@ -13,6 +14,8 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0"
   }
 }
