--- a/Appointments/package.json
+++ b/Appointments/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start": "node server.js"
   },
   "author": "ashwin",
   "license": "ISC",
