--- a/Full Stack Expense App/package.json
+++ b/Full Stack Expense App/package.json
@@ -10,6 +10,7 @@
   "author": "ashwin",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.37.1"
   }
 }
