--- a/Full Stack Expense App/package.json
+++ b/Full Stack Expense App/package.json
@@ -10,6 +10,8 @@
   "author": "ashwin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1"
   }
