--- a/Full Stack Expense App/package.json
+++ b/Full Stack Expense App/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "ashwin",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
